fixed overflow bug

--- a/src/styles/_navbar.scss
+++ b/src/styles/_navbar.scss
@@ -1,5 +1,5 @@
 .navbar {
-	width: 100vw;
+	width: 100%;
 	height: 80px;
 	background-color: var(--navbar-color);
 	color: var(--text-color);
@@ -41,12 +41,13 @@
 				background-color: #fff;
 				border: none;
 				border-radius: 4px;
+				position: relative;
 				.cart-quantity {
 					position: absolute;
 					background-color: rgb(177, 40, 40);
 					color: white;
-					right: 5px;
-					top: 5px;
+					right: -12px;
+					top: -12px;
 					border-radius: 50%;
 					font-size: 0.8rem;
 					display: flex;
