--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -21,7 +21,6 @@ body {
 }
 .App {
     min-height: 100vh;
-    min-width: 100vw;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
